# StockNews

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: universe.th.example.csv  watchlist.example.json
docs/: INVESTOR_SOP.md
scripts/: install_launch_agent.sh  run_once.sh  status_launch_agent.sh  uninstall_launch_agent.sh  watch.sh
src/stock_alerts/: __init__.py  __main__.py  analysis.py  app.py  cli.py  config.py  market_data.py  models.py  news.py  reporter.py  sop.py  telegram.py  telegram_bot.py  universe.py
tests/: test_analysis.py  test_app.py  test_cli.py  test_config.py  test_market_data.py  test_news.py  test_news_retry.py  test_reporter.py  test_sop.py  test_telegram.py  test_telegram_bot.py  test_universe.py
