[project]
name = "stock-telegram-alert"
version = "0.1.0"
description = "Telegram stock watch alerts with technical and news signals."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
